Removing additional notes and fixing libraries notebook plot

--- a/examples/install-notebook-scoped-libraries-at-runtime.ipynb
+++ b/examples/install-notebook-scoped-libraries-at-runtime.ipynb
@@ -395,6 +395,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Print the pie chart using `%matplot` magic and visualize it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplot plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The pie chart shows that 80% of users gave a rating of 4 or higher. Approximately 10% of users rated their books 2 or lower. In general, customers are happy about their book purchases from Amazon."
    ]
   },
@@ -436,9 +452,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***\n",
-    "## Additional Notes\n",
-    "To contribute to this example, please contact the EMR Notebooks team."
+    "After closing your notebook, the Pandas and Matplot libraries that you installed on the cluster using the `install_pypi_package` API are garbage and collected out of the cluster."
    ]
   }
  ],
