Updating word count example as per SA suggestion

--- a/examples/word-count-with-pyspark.ipynb
+++ b/examples/word-count-with-pyspark.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Word count with PySpark"
+    "# Word count with PySpark\n",
+    "\n",
+    "#### Topics covered in this example\n",
+    "* Write a file to HDFS, read the file and perform word count on the data."
    ]
   },
   {
@@ -18,7 +21,6 @@
     "<b>NOTE :</b> In order to execute this notebook successfully as is, please ensure the following prerequisites are completed.</div>\n",
     "\n",
     "* The EMR cluster attached to this notebook should have the `Spark` application installed.\n",
-    "* This example requires the user to create a test file on the EMR cluster master node and copy it to hdfs. Follow the `Setup` steps.\n",
     "* This notebook uses the `PySpark` kernel.\n",
     "***"
    ]
@@ -28,7 +30,7 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "In this example we use pyspark to count the occurrence of each word in the file stored in hdfs and store the results to s3.\n",
+    "In this example we write a file to hdfs, use pyspark to count the occurrence of each word in the file stored in hdfs and store the results to s3.\n",
     "***"
    ]
   },
@@ -37,13 +39,7 @@
    "metadata": {},
    "source": [
     "## Setup\n",
-    "1. Create a S3 bucket location to save your results. For example: s3://EXAMPLE-BUCKET/word-count/\n",
-    "\n",
-    "2. Connect to the master node of the EMR cluster using SSH. Create a test file on the master node of the EMR cluster that you wish to perform the word count on. Copy the test file from the master node to HDFS as shown in the following example.\n",
-    "\n",
-    "```\n",
-    " hdfs dfs -copyFromLocal test_file.txt \n",
-    "```\n",
+    "1. Create a S3 bucket to save your results or use an existing s3 bucket. For example: `s3://EXAMPLE-BUCKET/word-count/`\n",
     "***"
    ]
   },
@@ -53,7 +49,8 @@
    "source": [
     "## Example\n",
     "\n",
-    "Read the test file from hdfs."
+    "Create a test data frame with some sample records.\n",
+    "We will use the `createDataFrame()` method to create and `printSchema()` method to print out the schema."
    ]
   },
   {
@@ -62,14 +59,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = sc.textFile(\"hdfs:///user/hadoop/test_file.txt\") # Change this to the test_file.txt that you created in hdfs in Step 2."
+    "wordsDF = sqlContext.createDataFrame([(\"emr\",), (\"spark\",), (\"example\",), (\"spark\",), (\"pyspark\",), (\"python\",),\n",
+    "             (\"example\",), (\"emr\",), (\"example\",), (\"spark\",), (\"pyspark\",), (\"python\",)], ['words'])\n",
+    "wordsDF.show()\n",
+    "wordsDF.printSchema()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Display the contents of test file."
+    "Print out the number of unique words so that we can verify this number with the end result count."
    ]
   },
   {
@@ -78,14 +78,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.collect()"
+    "uniqueWordsCount = wordsDF.distinct().groupBy().count().head()[0]\n",
+    "print(uniqueWordsCount)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Count the occurance of each word."
+    "This step only shows an example on how to write to hdfs.\n",
+    "You can use an existing file stored in hdfs and read it as shown in the next steps."
    ]
   },
   {
@@ -94,9 +96,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "counts = data.flatMap(lambda line: line.split(\" \")) \\\n",
-    "             .map(lambda word: (word, 1)) \\\n",
-    "             .reduceByKey(lambda a, b: a+b)"
+    "wordsDF.write.csv(\"hdfs:///user/hadoop/test-data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read the csv file from hdfs and store in RDD."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wordsData = sc.textFile(\"hdfs:///user/hadoop/test-data.csv\")\n",
+    "wordsData.count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Display the contents of the file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wordsData.collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Count the occurance of each word and print the count of the result. This should be equal to the number of unique words we found earlier."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wordsCounts = wordsData.flatMap(lambda line: line.split(\" \")) \\\n",
+    "                       .map(lambda word: (word, 1)) \\\n",
+    "                       .reduceByKey(lambda a, b: a+b)\n",
+    "wordsCounts.count()"
    ]
   },
   {
@@ -112,14 +164,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "counts.collect()"
+    "wordsCounts.collect()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Save the results to your s3 bucket."
+    "Save the results to your s3 bucket. The results are stored in the key `word-count` and split based on paritions."
    ]
   },
   {
@@ -128,7 +180,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "counts.saveAsTextFile(\"s3://EXAMPLE-BUCKET/word-count\") # Change this to the S3 location that you created in Step 1."
+    "wordsCounts.saveAsTextFile(\"s3://EXAMPLE-BUCKET/word-count\") # Change this to the S3 location that you created in Setup step 1."
    ]
   }
  ],
