Correcting the quotations from single to double for word count example

--- a/examples/word-count-with-pyspark.ipynb
+++ b/examples/word-count-with-pyspark.ipynb
@@ -60,7 +60,7 @@
    "outputs": [],
    "source": [
     "wordsDF = sqlContext.createDataFrame([(\"emr\",), (\"spark\",), (\"example\",), (\"spark\",), (\"pyspark\",), (\"python\",),\n",
-    "             (\"example\",), (\"emr\",), (\"example\",), (\"spark\",), (\"pyspark\",), (\"python\",)], ['words'])\n",
+    "             (\"example\",), (\"emr\",), (\"example\",), (\"spark\",), (\"pyspark\",), (\"python\",)], [\"words\"])\n",
     "wordsDF.show()\n",
     "wordsDF.printSchema()"
    ]
