Format style, fix links and remove single quotes

--- a/examples/plot-graph-using-bokeh.ipynb
+++ b/examples/plot-graph-using-bokeh.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "65682475",
+   "id": "35cfb208",
    "metadata": {},
    "source": [
     "# Plot graph using `bokeh`\n",
@@ -14,20 +14,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92b7c5ca",
+   "id": "26237079",
    "metadata": {},
    "source": [
+    "***\n",
+    "\n",
     "## Introduction\n",
-    "This is an example from [bokeh tutorial](https://github.com/bokeh/jupyter_bokeh/blob/main/examples/jupyter_interactors.ipynb). In this example, we are going to use [Bokeh](https://docs.bokeh.org/en/latest/docs/user_guide/jupyter.html) to plot an interactive graph. We will plot different trignometric functions, namely sin, cos and tan. To interactive with the graph, we will use a dropdown that offers a choice to select a function and the sliders to control the frequency, amplitude, and phase."
+    "This is an example from <a href=\"https://github.com/bokeh/jupyter_bokeh/blob/main/examples/jupyter_interactors.ipynb\" target=\"_blank\">bokeh tutorial</a>. In this example, we are going to use <a href=\"https://docs.bokeh.org/en/latest/docs/user_guide/jupyter.html\" target=\"_blank\">Bokeh</a> to plot an interactive graph. We will plot different trignometric functions, namely sin, cos and tan. To interactive with the graph, we will use a dropdown that offers a choice to select a function and the sliders to control the frequency, amplitude, and phase.\n",
+    "\n",
+    "***"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8e55082b",
+   "id": "81f6b2ab",
    "metadata": {},
    "source": [
-    "**Install dependencies**\n",
-    "\n",
     "Install dependency `bokeh` using `%pip` cell magic.\n",
     "\n",
     "`%pip install` is same as `!/emr/notebook-env/bin/pip install` and are installed in `/home/emr-notebook/`.\n",
@@ -38,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9204edce",
+   "id": "c13d9f55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52c15bfc",
+   "id": "d38052f4",
    "metadata": {},
    "source": [
     "import dependencies"
@@ -56,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52aa4af9",
+   "id": "976fa391",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d056eab0",
+   "id": "281a2bb0",
    "metadata": {},
    "source": [
     "Generate x and y axes co-ordinates for sin function.\n",
@@ -80,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5585b19",
+   "id": "0624f7b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9654d4b3",
+   "id": "eb01a95c",
    "metadata": {},
    "source": [
     "Define a graph and draw a line with sin as default function"
@@ -99,18 +101,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1035912",
+   "id": "201d45b4",
    "metadata": {},
    "outputs": [],
    "source": [
     "p = figure(title=\"simple line example\", plot_height=300, plot_width=600, y_range=(-5,5),\n",
-    "           background_fill_color='#efefef')\n",
+    "           background_fill_color=\"#efefef\")\n",
     "r = p.line(x, y, color=\"#8888cc\", line_width=1.5, alpha=0.8)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b15bdf5c",
+   "id": "52fa47ba",
    "metadata": {},
    "source": [
     "Define an update function that will be callable to interactors to update the graph with different trignometic functions."
@@ -119,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c353912",
+   "id": "76215a3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,13 +129,13 @@
     "    if   f == \"sin\": func = np.sin\n",
     "    elif f == \"cos\": func = np.cos\n",
     "    elif f == \"tan\": func = np.tan    \n",
-    "    r.data_source.data['y'] = A * func(w * x + phi)\n",
+    "    r.data_source.data[\"y\"] = A * func(w * x + phi)\n",
     "    push_notebook()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f36a2a88",
+   "id": "7fbe402e",
    "metadata": {},
    "source": [
     "Render the graph"
@@ -142,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2439c2c1",
+   "id": "ccf184ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aca3a6b1",
+   "id": "75216e25",
    "metadata": {},
    "source": [
     "Interact with the graph: dropdown to select a trignometric functions and sliders to change the value of frequency, amplitude, and phase"
@@ -160,20 +162,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63f21918",
+   "id": "acf00693",
    "metadata": {},
    "outputs": [],
    "source": [
     "interact(update, f=[\"sin\", \"cos\"], w=(0,50), A=(1,10), phi=(0, 20, 0.1))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "641dcc43",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
