Changed the file name to short file name for Redshift notebook

--- a/examples/redshift-with-spark.ipynb
+++ b/examples/redshift-with-spark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "91b98d0a",
+   "id": "c3283ba0",
    "metadata": {},
    "source": [
     "# Connect to Amazon Redshift with Pyspark, Spark Scala, and SparkR\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bcd6581",
+   "id": "571524e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e4b48cb",
+   "id": "3cb65f1d",
    "metadata": {},
    "source": [
     "## Connect to Amazon Redshift using Pyspark"
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a068740",
+   "id": "14a2740d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
     "\n",
     "jdbcDF.limit(5).show()\n",
     "\n",
-    "# Read data from target table\n",
+    "# Write data to target table\n",
     "\n",
     "jdbcDF.write \\\n",
     "    .format(\"io.github.spark_redshift_community.spark.redshift\") \\\n",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b459ace1",
+   "id": "76b4b496",
    "metadata": {},
    "source": [
     "## Connect to Amazon Redshift using Scala"
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ceacd94",
+   "id": "0737313a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,6 +137,8 @@
     "  .option(\"aws_iam_role\", str_iam_role)\n",
     "  .load())\n",
     "\n",
+    "# Write data to target table\n",
+    "\n",
     "jdbcDF.limit(5).show()\n",
     "\n",
     "jdbcDF.write.mode(\"append\").\n",
@@ -146,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "412f9c6d",
+   "id": "2811329a",
    "metadata": {},
    "source": [
     "## Connect to Amazon Redshift using SparkR"
@@ -155,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac51dfc4",
+   "id": "6aca31c5",
    "metadata": {},
    "outputs": [],
    "source": [
