Fixed the Livy typo and Updated Prequisites to explictily mention that the command should be run from the EMR cluster

--- a/examples/dynamodb-with-spark.ipynb
+++ b/examples/dynamodb-with-spark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "59896e24",
+   "id": "c0c8c8f9",
    "metadata": {},
    "source": [
     "## Connect DynamoDB using spark connector from EMR Studio Notebook using Spark Scala\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e7434c0",
+   "id": "66cbe6a8",
    "metadata": {},
    "source": [
     "## Table of Contents:\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39997538",
+   "id": "f74c4358",
    "metadata": {},
    "source": [
     "## Prerequisites"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7329c0d3",
+   "id": "d35bce95",
    "metadata": {},
    "source": [
     " 1. EMR Version - emr-6.4.0\n",
@@ -45,6 +45,8 @@
     " \n",
     " `/usr/share/aws/emr/ddb/lib/emr-ddb-hadoop.jar`\n",
     " 4. To locally use the spark.jars in the configuration using the `file://` protocol, Livy does not allow local files to be uploaded to the user session by default. So we need to update the livy configuration to allow the local directory and restart livy server to have these take effects.\n",
+    " \n",
+    " ##### The following commands should be run from the EMR cluster attached to the notebook\n",
     "     \n",
     "     a. Open the Livy configuration file\n",
     "     \n",
@@ -52,17 +54,16 @@
     "     \n",
     "     b. Add the ddb jars:\n",
     "     \n",
-    "     `livy.file.local-dir-whitelist   /usr/share/aws/emr/ddb/lib/`\n",
+    "     `livy.file.local-dir-whitelist /usr/share/aws/emr/ddb/lib/`\n",
     "     \n",
-    "     c. Restart Levi\n",
+    "     c. Restart Livy\n",
     "     \n",
-    "     `systemctl restart livy-server.service`\n",
-    "\n"
+    "     `systemctl restart livy-server.service`\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fe3471d8",
+   "id": "9e0bfc9d",
    "metadata": {},
    "source": [
     "## Introduction"
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cd4bb9a",
+   "id": "fc8fb425",
    "metadata": {},
    "source": [
     "This notebook shows how to connect to DynamoDB using DynamoDB Spark connector(emr-ddb-hadoop) from Amazon EMR Studio Notebook using Scala"
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8d41e18",
+   "id": "e705dd8e",
    "metadata": {},
    "source": [
     "## Load the configuration in memory"
@@ -87,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d3a0794",
+   "id": "d2b1831e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "270589cd",
+   "id": "664d194a",
    "metadata": {},
    "source": [
     "## Read data using Pyspark"
@@ -110,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5534c658",
+   "id": "3b102e29",
    "metadata": {},
    "outputs": [],
    "source": [
