--- a/examples/jupyter_magic_commands.ipynb
+++ b/examples/jupyter_magic_commands.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1128013e",
+   "id": "0ea49c6f",
    "metadata": {},
    "source": [
     "# Using Jupyter Magics on EMR Studio\n",
@@ -12,13 +12,14 @@
     "\n",
     "* Built-in Magics\n",
     "* EMR Magics\n",
+    "    * Mounting a Workspace Directory\n",
     "    * Importing local python files or package\n",
     "    * Downloading a file\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "085e2d51",
+   "id": "0e4e93f6",
    "metadata": {},
    "source": [
     "***\n",
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e0e244a",
+   "id": "0f466c14",
    "metadata": {},
    "source": [
     "## Built-in Magics\n",
@@ -54,7 +55,7 @@
     "}\n",
     "```\n",
     "\n",
-    "2. `%%display` - is only available in allows you to display the rows in a Spark dataframe in addition to providing the ability to visualize the rows in a chart.\n",
+    "2. `%%display` - is only available in Spark Kernels and allows you to display the rows of a Spark dataframe in a tabular format in addition to providing the ability to visualize the rows in a chart.\n",
     "\n",
     "```\n",
     "%%display df\n",
@@ -66,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f44da304",
+   "id": "940af90a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fb11127",
+   "id": "11c49000",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3349e6a8",
+   "id": "b491a269",
    "metadata": {},
    "source": [
     "## EMR Magics\n",
@@ -127,16 +128,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "436a90e6",
+   "id": "b8eb7e8f",
    "metadata": {},
    "source": [
+    "### Mounting a Workspace Directory\n",
+    "\n",
     "Let's mount a Workpsace directory on to the EMR cluster:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af0c1e47",
+   "id": "e54f4788",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fabba330",
+   "id": "86346b00",
    "metadata": {},
    "source": [
     "Note that your current directory changes to the mounted Workspace directory and you can list the contents in it."
@@ -154,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e652f41",
+   "id": "f421fa98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1aacb614",
+   "id": "93f7e15a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d32f589a",
+   "id": "ccaf71d6",
    "metadata": {},
    "source": [
     "### Importing Local Python Files or Packages.\n",
@@ -185,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fb54378",
+   "id": "96428d2b",
    "metadata": {},
    "source": [
     "You can now execute local python files and packages."
@@ -194,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d101315c",
+   "id": "5cb7aa81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,10 +206,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cf27324",
+   "id": "cf97bbc9",
    "metadata": {},
    "source": [
-    "## Downloading a File.\n",
+    "### Downloading a File.\n",
     "\n",
     "Sometimes we need to download a file to our local desktop for e.g. to further analyze some data in Excel. Let's now see the `generate_s3_download_url` magic in action that allows us to do just that. We save the dataframe as a Parquet file in an S3 bucket."
    ]
@@ -214,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbc6fd9c",
+   "id": "e916c43d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6db5dc6",
+   "id": "a63a16b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c108142",
+   "id": "67744d66",
    "metadata": {},
    "source": [
     "We can now generate a download URL for this file. Note that the url is a temporary one and the command provides options on how long the url should be available."
@@ -245,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10478bc5",
+   "id": "5de3d4a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d530f708",
+   "id": "188d7c5d",
    "metadata": {},
    "source": [
     "and then view the link for the output."
@@ -263,21 +266,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "display_name": "PySpark",
+   "language": "",
+   "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "ipython",
+    "name": "python",
     "version": 3
    },
-   "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "name": "pyspark",
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
