--- a/examples/jupyter-magic-commands.ipynb
+++ b/examples/jupyter-magic-commands.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0ea49c6f",
+   "id": "8b1bc4f8",
    "metadata": {},
    "source": [
     "# Using Jupyter Magics on EMR Studio\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e4e93f6",
+   "id": "4602d4e6",
    "metadata": {},
    "source": [
     "***\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f466c14",
+   "id": "4ed4a9c0",
    "metadata": {},
    "source": [
     "## Built-in Magics\n",
@@ -61,33 +61,33 @@
     "%%display df\n",
     "```\n",
     "\n",
-    "Let's see the `%%display` magic in action:"
+    "Let\"s see the `%%display` magic in action:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "940af90a",
+   "id": "96714577",
    "metadata": {},
    "outputs": [],
    "source": [
     "data = [{\n",
-    "    \"Category\": 'A',\n",
+    "    \"Category\": \"A\",\n",
     "    \"ID\": 1,\n",
     "    \"Value\": 121.44,\n",
     "    \"Truth\": True\n",
     "}, {\n",
-    "    \"Category\": 'B',\n",
+    "    \"Category\": \"B\",\n",
     "    \"ID\": 2,\n",
     "    \"Value\": 300.01,\n",
     "    \"Truth\": False\n",
     "}, {\n",
-    "    \"Category\": 'C',\n",
+    "    \"Category\": \"C\",\n",
     "    \"ID\": 3,\n",
     "    \"Value\": 10.99,\n",
     "    \"Truth\": None\n",
     "}, {\n",
-    "    \"Category\": 'E',\n",
+    "    \"Category\": \"E\",\n",
     "    \"ID\": 4,\n",
     "    \"Value\": 33.87,\n",
     "    \"Truth\": True\n",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11c49000",
+   "id": "1e29448c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b491a269",
+   "id": "5ea11a01",
    "metadata": {},
    "source": [
     "## EMR Magics\n",
@@ -119,7 +119,7 @@
     "* mount_workspace_dir - allows you to mount an EMR Studio Workspace directory to an EMR Cluster.\n",
     "* generate_s3_download_url - alows you to generate a temporary signed download URL for an S3 object.\n",
     "\n",
-    "Let's install the EMR-notebooks-magics package on your EMR Cluster:\n",
+    "Lets install the EMR-notebooks-magics package on your EMR Cluster:\n",
     "\n",
     "```\n",
     "%pip install -i https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple emr-notebooks-magics\n",
@@ -128,18 +128,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8eb7e8f",
+   "id": "569f2868",
    "metadata": {},
    "source": [
     "### Mounting a Workspace Directory\n",
     "\n",
-    "Let's mount a Workpsace directory on to the EMR cluster:"
+    "Lets mount a Workpsace directory on to the EMR cluster:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e54f4788",
+   "id": "aa127024",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86346b00",
+   "id": "7c36a413",
    "metadata": {},
    "source": [
     "Note that your current directory changes to the mounted Workspace directory and you can list the contents in it."
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f421fa98",
+   "id": "cb3ee468",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93f7e15a",
+   "id": "9f868793",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccaf71d6",
+   "id": "750782e7",
    "metadata": {},
    "source": [
     "### Importing Local Python Files or Packages.\n",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96428d2b",
+   "id": "983b4594",
    "metadata": {},
    "source": [
     "You can now execute local python files and packages."
@@ -197,39 +197,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cb7aa81",
+   "id": "5d6d05ba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run -i  '<local_python_file.py>''"
+    "%run -i  \"\"<local_python_file.py>\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cf97bbc9",
+   "id": "84148202",
    "metadata": {},
    "source": [
     "### Downloading a File.\n",
     "\n",
-    "Sometimes we need to download a file to our local desktop for e.g. to further analyze some data in Excel. Let's now see the `generate_s3_download_url` magic in action that allows us to do just that. We save the dataframe as a Parquet file in an S3 bucket."
+    "Sometimes we need to download a file to our local desktop for e.g. to further analyze some data in Excel. Lets now see the `generate_s3_download_url` magic in action that allows us to do just that. We save the dataframe as a Parquet file in an S3 bucket."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e916c43d",
+   "id": "bec9d8dd",
    "metadata": {},
    "outputs": [],
    "source": [
     "df = _\n",
-    "s3_url = 's3://<bucket>/<prefix>/<filename>.parquet.gzip'\n",
-    "df.to_parquet(s3_url, compression='gzip')"
+    "s3_url = \"s3://<bucket>/<prefix>/<filename>.parquet.gzip\"\n",
+    "df.to_parquet(s3_url, compression=\"gzip\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a63a16b7",
+   "id": "fcc17350",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67744d66",
+   "id": "c671cc85",
    "metadata": {},
    "source": [
     "We can now generate a download URL for this file. Note that the url is a temporary one and the command provides options on how long the url should be available."
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5de3d4a5",
+   "id": "dbda72bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "188d7c5d",
+   "id": "2f853f3a",
    "metadata": {},
    "source": [
     "and then view the link for the output."
