Changed the single quotes to double quotes

--- a/examples/redshift-with-spark.ipynb
+++ b/examples/redshift-with-spark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c3283ba0",
+   "id": "a28da63f",
    "metadata": {},
    "source": [
     "# Connect to Amazon Redshift with Pyspark, Spark Scala, and SparkR\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "571524e7",
+   "id": "618db6ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cb65f1d",
+   "id": "c3433ed7",
    "metadata": {},
    "source": [
     "## Connect to Amazon Redshift using Pyspark"
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14a2740d",
+   "id": "8220a165",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,11 +74,11 @@
     "\n",
     "#Declare the variables and replace the variables values as appropiate\n",
     "\n",
-    "str_jdbc_url='jdbc:redshift://<Redshift Endpoint>:5439/dev?user=<username>&password=<password>'\n",
-    "str_dbname='<Database name>'\n",
-    "str_tgt_table='<Target Table>'\n",
-    "str_s3_path='s3://<S3 Path>'\n",
-    "str_iam_role='<IAM Role ARN>'\n",
+    "str_jdbc_url=\"jdbc:redshift://<Redshift Endpoint>:5439/dev?user=<username>&password=<password>\"\n",
+    "str_dbname=\"<Database name>\"\n",
+    "str_tgt_table=\"<Target Table>\"\n",
+    "str_s3_path=\"s3://<S3 Path>\"\n",
+    "str_iam_role=\"<IAM Role ARN>\"\n",
     "\n",
     "# Read data from source table\n",
     "\n",
@@ -99,12 +99,12 @@
     "    .option(\"url\", str_jdbc_url) \\\n",
     "    .option(\"dbtable\", str_tgt_table) \\\n",
     "    .option(\"tempdir\", str_s3_path) \\\n",
-    "    .option(\"aws_iam_role\",str_iam_role).mode('append').save()"
+    "    .option(\"aws_iam_role\",str_iam_role).mode(\"append\").save()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "76b4b496",
+   "id": "bd9f2fad",
    "metadata": {},
    "source": [
     "## Connect to Amazon Redshift using Scala"
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0737313a",
+   "id": "c7f17fdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2811329a",
+   "id": "d20e8bcd",
    "metadata": {},
    "source": [
     "## Connect to Amazon Redshift using SparkR"
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6aca31c5",
+   "id": "eecde2e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,11 +165,11 @@
     "\n",
     "#Declare the variables and replace the variables values as appropiate\n",
     "\n",
-    "str_jdbc_url='jdbc:redshift://<Redshift Endpoint>:5439/dev?user=<username>&password=<password>'\n",
-    "str_dbname='<Database name>'\n",
-    "str_tgt_table='<Target Table>'\n",
-    "str_s3_path='s3://<S3 Path>'\n",
-    "str_iam_role='<IAM Role ARN>'\n",
+    "str_jdbc_url=\"jdbc:redshift://<Redshift Endpoint>:5439/dev?user=<username>&password=<password>\"\n",
+    "str_dbname=\"<Database name>\"\n",
+    "str_tgt_table=\"<Target Table>\"\n",
+    "str_s3_path=\"s3://<S3 Path>\"\n",
+    "str_iam_role=\"<IAM Role ARN>\"\n",
     "\n",
     "# Read data from source table\n",
     "\n",
