--- a/examples/multi-lang-support-in-spark.ipynb
+++ b/examples/multi-lang-support-in-spark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0ecee20a",
+   "id": "a0177726",
    "metadata": {},
    "source": [
     "# Multi-Language Support in Spark Kernels\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc14a2ba",
+   "id": "831c3a58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ef70703",
+   "id": "ca9be37c",
    "metadata": {},
    "source": [
     "The `%%sql` cellmagic allows users to execute Spark-SQL code. Here I am querying the tables in the default database."
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a1e1bfd",
+   "id": "301ceb18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11a29a50",
+   "id": "0d6b263c",
    "metadata": {},
    "source": [
     "The `%%rspark` cell magic allows users to execute sparkr code. "
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "136c72fe",
+   "id": "ddf003b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ece0411",
+   "id": "0cd9d9e1",
    "metadata": {},
    "source": [
     "The `%%scalaspark` cell magic allows users to execute spark scala code. Note that here I am reading data from the temp table previously creating using Python."
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98131007",
+   "id": "faf303a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,18 +102,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "286a85af",
+   "id": "2f8e1dcf",
    "metadata": {},
    "source": [
     "### Sharing Data using temp tables/views.\n",
     "\n",
-    "You can share data between languages using temp tables. Let's create a temp table using python in Spark:"
+    "You can share data between languages using temp tables. Lets create a temp table using python in Spark:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b47c48de",
+   "id": "9a81e181",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,16 +124,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf9dfb8f",
+   "id": "154b5757",
    "metadata": {},
    "source": [
-    "And now let's read the temp table using Scala:"
+    "And now lets read the temp table using Scala:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7040a1db",
+   "id": "3e26a9b6",
    "metadata": {},
    "outputs": [],
    "source": [
