Replaced single quotes with double quotes for redshift and JDBC RDBMS notebooks

--- a/examples/jdbc-rdbms-with-spark.ipynb
+++ b/examples/jdbc-rdbms-with-spark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c138c33c",
+   "id": "44cde1cc",
    "metadata": {},
    "source": [
     "# Connect RDBS using jdbc connector from EMR Studio Notebook using Pyspark, Spark Scala, and SparkR\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7a9ed8f",
+   "id": "e63a1147",
    "metadata": {},
    "source": [
     "## Table of Contents:\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1a4ec4e",
+   "id": "1138c207",
    "metadata": {},
    "source": [
     "## Prerequisites"
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8f06387",
+   "id": "7a9f2d7b",
    "metadata": {},
    "source": [
     "Download jdbc driver and upload it on S3 which is accessible from the Amazon EMR cluster attached to the Amazon EMR Studio. "
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8c6bcc0",
+   "id": "34d0aa33",
    "metadata": {},
    "source": [
     "## Introduction"
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7bf49fe",
+   "id": "f0706f71",
    "metadata": {},
    "source": [
     "This notebooks shows how to connect RDBS using jdbc connector from Amazon EMR Studio Notebook. "
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10db46bc",
+   "id": "980ad752",
    "metadata": {},
    "source": [
     "## Upload the MySQL jdbc driver in S3 and declare the path"
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97856e5f",
+   "id": "fd99a56a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e08a2e33",
+   "id": "1c41e375",
    "metadata": {},
    "source": [
     "## Read and write data using Pyspark"
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c37e19c7",
+   "id": "1c954008",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,12 +103,12 @@
     "\n",
     "#Declare the variables and replace the variables values as appropiate\n",
     "\n",
-    "str_jdbc_url='jdbc:mysql://<Database endpoint>:3306/<Database name>'\n",
-    "str_Query= '<Select query>'\n",
-    "str_dbname='<Database name>'\n",
-    "str_username='<Username>'\n",
-    "str_password='<Password>'\n",
-    "str_tgt_table='<Target Table>'\n",
+    "str_jdbc_url=\"jdbc:mysql://<Database endpoint>:3306/<Database name>\"\n",
+    "str_Query= \"<Select query>\"\n",
+    "str_dbname=\"<Database name>\"\n",
+    "str_username=\"<Username>\"\n",
+    "str_password=\"<Password>\"\n",
+    "str_tgt_table=\"<Target Table>\"\n",
     "\n",
     "# Read data from source table\n",
     "\n",
@@ -129,12 +129,12 @@
     "    .option(\"url\", str_jdbc_url) \\\n",
     "    .option(\"dbtable\", str_tgt_table) \\\n",
     "    .option(\"user\", str_username) \\\n",
-    "    .option(\"password\", str_password).mode('append').save()\n"
+    "    .option(\"password\", str_password).mode(\"append\").save()\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "25dfab9e",
+   "id": "5c26a471",
    "metadata": {},
    "source": [
     "## Read and write data using Scala"
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "116b95dc",
+   "id": "2666bd59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a32895c2",
+   "id": "066b6a73",
    "metadata": {},
    "source": [
     "## Read and write data using SparkR"
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d652de9e",
+   "id": "898d69a1",
    "metadata": {},
    "outputs": [],
    "source": [
