Adding jupyter-keyboard-shortcuts.ipynb

--- a/examples/jupyter-keyboard-shortcuts.ipynb
+++ b/examples/jupyter-keyboard-shortcuts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ca5620f9",
+   "id": "c1d6be25",
    "metadata": {},
    "source": [
     "# Jupyter Keyboard Shortcuts\n",
@@ -10,7 +10,7 @@
     "This notebook covers common keyboard shortcuts that you can use to increase your productivity when working with Jupyter Notebooks.\n",
     "\n",
     "<div class=\"alert alert-block alert-info\">\n",
-    "<b>NOTE :</b> If you are on a Mac, substitute `command` for `control`. Don't type the _+_ (it means press both keys at once). </div>\n",
+    "<b>NOTE :</b> If you are on a Mac, substitute \"command\" for \"control\". Dont type the _+_ (it means press both keys at once). </div>\n",
     "\n",
     "***\n",
     "\n",
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9169987",
+   "id": "88f53ece",
    "metadata": {},
    "outputs": [],
    "source": []
