--- a/examples/jupyter-magic-commands.ipynb
+++ b/examples/jupyter-magic-commands.ipynb
@@ -13,7 +13,7 @@
     "* Built-in Magics\n",
     "* EMR Magics\n",
     "    * Mounting a Workspace Directory\n",
-    "    * Importing local python files or package\n",
+    "    * Executing local python files or package\n",
     "    * Downloading a file\n"
    ]
   },
@@ -29,7 +29,7 @@
     "<b>NOTE :</b> In order to execute this notebook successfully as is, please ensure the following prerequisites are completed.</div>\n",
     "\n",
     "* The EMR cluster attached to this notebook should have the `Spark` application installed.\n",
-    "* This notebook uses the `Python3` kernel.\n",
+    "* This notebook uses the `PySpark` kernel.\n",
     "***\n",
     "\n"
    ]
@@ -41,9 +41,9 @@
    "source": [
     "## Built-in Magics\n",
     "\n",
-    "Jupyter magics act as convenient functions that accomplishes something useful and saves the effort of writing Python code instead. There are useful buiilt-in magic functions and some are unique to EMR Studio, we document them here: https://docs.aws.amazon.com/emr/latest/ManagementGuide/emr-studio-magics.html\n",
+    "Jupyter magics act as convenient functions that accomplish something useful and saves the effort of writing Python code instead. There are useful buiilt-in magic functions and some are unique to EMR Studio, we document them here: https://docs.aws.amazon.com/emr/latest/ManagementGuide/emr-studio-magics.html\n",
     "\n",
-    "The most important magic commanda are:\n",
+    "The most important magic commands are:\n",
     "\n",
     "1. `%%configure` - allows you to change the session properties of a Spark session in Spark Kernels:\n",
     "\n",
@@ -181,7 +181,7 @@
    "id": "750782e7",
    "metadata": {},
    "source": [
-    "### Importing Local Python Files or Packages.\n",
+    "### Executing Local Python Files or Packages.\n",
     "\n",
     "\n"
    ]
