Snowflake: Clean up data frame creation and remove additional character from the sample password

--- a/examples/snowflake-with-spark.ipynb
+++ b/examples/snowflake-with-spark.ipynb
@@ -195,13 +195,11 @@
    },
    "outputs": [],
    "source": [
-    "d = [{'name': 'john jones', 'id': 1},\n",
-    "    {'name': 'tracey smith', 'id': 2},\n",
-    "    {'name': 'amy sander', 'id': 3}]\n",
-    "\n",
-    "rdd = sc.parallelize(d)\n",
-    "\n",
-    "sampleDf = spark.createDataFrame(rdd, ['id', 'name'])\n",
+    "sampleDf = spark.createDataFrame([\n",
+    " (\"1\", \"john jones\"),\n",
+    " (\"2\", \"tracey smith\"),\n",
+    " (\"3\", \"amy sander\")\n",
+    "],[\"id\", \"name\"])\n",
     "\n",
     "sampleDf.show()"
    ]
@@ -237,7 +235,7 @@
     "sfOptions = {\n",
     "  \"sfURL\" : \"https://abc12345.us-east-1.snowflakecomputing.com\",\n",
     "  \"sfUser\" : \"SNOWFLAKE_USER\",\n",
-    "  \"sfPassword\" : \"My_Password!\",\n",
+    "  \"sfPassword\" : \"My_Password\",\n",
     "  \"sfDatabase\" : \"SAMPLEDB\",\n",
     "  \"sfSchema\" : \"PUBLIC\"\n",
     "}\n",
